add: docker, docker-compose and fix drop Content-Type from HTTPException headers to avoid json_response conflict

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ APP_PORT=8080
 CLIENT_MAX_SIZE_MB=20
 
 # PostgreSQL
-DATABASE_URL=postgresql://user:password@localhost:5432/images_db
+DATABASE_URL=postgresql://app:app@db:5432/images_db
