--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@ MAX_PIXELS=50000000
 
 DEFAULT_QUALITY=85
 
-DATABASE_URL=postgresql://user:password@localhost:5432/images_db
+DATABASE_URL=postgresql://app:app@db:5432/images_db
