chore(config): extend .env with API_TOKENS and logging options

--- a/.env
+++ b/.env
@@ -4,3 +4,22 @@ CLIENT_MAX_SIZE_MB=20
 
 # PostgreSQL
 DATABASE_URL=postgresql://app:app@db:5432/images_db
+
+# ===== Auth =====
+API_TOKENS=secret-token-1,another-token-2
+
+# ===== Logging =====
+LOG_PATH=./logs/app.log
+LOG_MAX_BYTES=1048576      # 1 MiB
+LOG_BACKUPS=5
+
+# Ограничение на размер клиента у aiohttp (МБ)
+CLIENT_MAX_SIZE_MB=20
+
+# Лимит на файл (МБ) при чтении multipart
+MAX_IMAGE_MB=20
+
+# Ограничение на количество пикселей
+MAX_PIXELS=50000000
+
+DEFAULT_QUALITY=85
