--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
 APP_HOST=0.0.0.0
 APP_PORT=8080
+CLIENT_MAX_SIZE_MB=20
+
+# PostgreSQL
+DATABASE_URL=postgresql://app:app@db:5432/images_db
+
+# ===== Auth =====
+API_TOKENS=secret-token-1,another-token-2
+
+# ===== Logging =====
+LOG_PATH=./logs/app.log
+LOG_MAX_BYTES=1048576      # 1 MiB
+LOG_BACKUPS=5
 
 # Ограничение на размер клиента у aiohttp (МБ)
 CLIENT_MAX_SIZE_MB=20
@@ -11,5 +23,3 @@ MAX_IMAGE_MB=20
 MAX_PIXELS=50000000
 
 DEFAULT_QUALITY=85
-
-DATABASE_URL=postgresql://app:app@db:5432/images_db
